# user-microservices

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-staging.yml  build-template.yml  ci-reports-api.yml  detect-changes.yml  get-staging-tags.yml  test-template.yml  tests.yml
libs/db-handler/: README.md  pyproject.toml
libs/db_handler/: README.md  pyproject.toml
libs/query/: README.md  pyproject.toml
libs/query/query/: __init__.py  _utils.py
libs/query/tests/unittests/: test_base_paginated_query.py  test_base_query.py  test_base_sorted_query.py  test_field_enum_factory.py  test_field_extraction.py
projects/reports/: logging.conf  pyproject.toml
projects/reports/reports/: app.py  crud.py  database.py  filters.py  main.py  models.py  settings.py
reports/: .env.test  Dockerfile  README.md  logging.yml  pyproject.toml
reports/reports/: __init__.py  app.py  database.py  filters.py  main.py  models.py  routes.py  settings.py  utils.py
reports/reports/database/: __init__.py  _connection.py  _getters.py  _interactions.py  _models.py  models.py
reports/reports/models/: __init__.py  _base.py  _by_day.py  _by_object.py  _reports.py
reports/reports/schemas/: __init__.py  _by_object.py  _counters.py  _reports.py
reports/tests/: conftest.py  docker-compose.yml  mongo-init.js  test_create_report.py  test_delete_report.py  test_get_report_list.py  test_get_reports_by_day.py  test_get_reports_by_object.py  test_get_single_report.py  test_initialization.py  test_patch_report.py  test_post_report.py  test_put_report.py  test_read_reports.py  test_update_report.py  utils.py
reports/tests/integration/: test_individual_report_handling.py  test_query_report_list.py  test_query_reports_by_day.py  test_query_reports_by_object.py  test_query_reports_by_user.py
reports/tests/unittests/: test_delete_report.py  test_download_csv_reports.py  test_get_report_list.py  test_get_reports_by_day.py  test_get_reports_by_object.py  test_get_reports_by_user.py  test_get_single_report.py  test_initialization.py  test_patch_report.py  test_post_report.py  test_put_report.py
users/: README.md  pyproject.toml
users/database/: __init__.py  database.py
users/tests/test_routes/: test_password_auth.py  test_token.py
users/tests/test_utils/: test_jwt_helper.py  test_password_auth_client.py
users/users/: auth.py  auth_clients.py  database.py  dependencies.py  helpers.py  main.py  settings.py  utils.py
users/users/database/: database.py  models.py
users/users/models/: __init__.py  google_auth.py  models.py  password_auth.py  token.py
users/users/routes/: google_oauth.py  password_auth.py  token.py
users/users/schemas/: token.py  user.py
users/utils/: __init__.py  singleton_helper.py
users/utils/auth/: __init__.py  google_auth_client.py  password_auth.py
users/utils/jwt/: __init__.py  helpers.py
(+21 files in other folders)
