[tool.poetry]
name = "reports"
version = "0.2.0"
description = ""
authors = ["ALeRCE Broker <alercebroker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.0"
starlette-prometheus = "^0.9.0"
email-validator = "^1.3.0"
pandas = "^1.5.3"
astropy = "^5.2.1"
httpx = "^0.23.3"
db-handler = {path = "../libs/db_handler", develop = true}
query = {path = "../libs/query", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.1"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
