[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["ALeRCE Broker <alercebroker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
db-handler = {path = "../libs/db_handler", develop = true}
starlette-prometheus = "^0.9.0"
Authlib = "^1.2.0"
PyJWT = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
