[tool.poetry]
name = "query"
version = "0.1.0"
description = ""
authors = ["ALeRCE Broker <alercebroker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
